--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
       <div class="position-sticky">
         <div class="list-group list-group-flush mx-3 mt-4">
           <a href="#" class="list-group-item list-group-item-action py-2 ripple" aria-current="true">
-            <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>dashboard Admin</span>
+            <i class="fa-solid fa-house"></i><span>dashboard Admin</span>
           </a>
           <a href="#" class="list-group-item list-group-item-action py-2 ripple active">
             <i class="fas fa-chart-area fa-fw me-3"></i><span>Pacientes</span>
@@ -35,7 +35,7 @@
           </a>
           <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
               class="fas fa-chart-bar fa-fw me-3"></i><span>Configurar perfil</span></a>
-          
+              <i class="fa-solid fa-house"></i>
         </div>
       </div>
     </nav>
