--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,23 +17,26 @@
        <!--Main Navigation-->
 <header>
     <!-- Sidebar -->
+    <router-outlet></router-outlet>
     <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
       <div class="position-sticky">
         <div class="list-group list-group-flush mx-3 mt-4">
           <a href="#" class="list-group-item list-group-item-action py-2 ripple" aria-current="true">
             <i class="fa-solid fa-house"></i><span>dashboard Admin</span>
           </a>
-          <a href="#" class="list-group-item list-group-item-action py-2 ripple active">
-            <i class="fas fa-chart-area fa-fw me-3"></i><span>Pacientes</span>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
+          <a href="#" class="list-group-item list-group-item-action py-2 ripple active" routerLink="/pacientes-list" routerLinkActive="activebutton">
+            <i class="fas fa-chart-area fa-fw me-3"></i><span>Pacientes</span></a>
+            
+          <a href="#" class="list-group-item list-group-item-action py-2 ripple" routerLink="/terapeuta-list" routerLinkActive="activebutton"><i
               class="fas fa-lock fa-fw me-3"></i><span>Terapeutas</span></a>
-          <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
+
+          <a href="#" class="list-group-item list-group-item-action py-2 ripple" routerLink="/consulta-list" routerLinkActive="activebutton"><i
               class="fas fa-chart-line fa-fw me-3"></i><span>Consulta</span></a>
-          <a href="#" class="list-group-item list-group-item-action py-2 ripple">
-            <i class="fas fa-chart-pie fa-fw me-3"></i><span>Pruebas</span>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action py-2 ripple"><i
+
+          <a href="#" class="list-group-item list-group-item-action py-2 ripple" routerLink="/pruebas-list" routerLinkActive="activebutton">
+            <i class="fas fa-chart-pie fa-fw me-3"></i><span>Pruebas</span></a>
+
+          <a href="#" class="list-group-item list-group-item-action py-2 ripple" routerLink="/config-list" routerLinkActive="activebutton"><i
               class="fas fa-chart-bar fa-fw me-3"></i><span>Configurar perfil</span></a>
               <i class="fa-solid fa-house"></i>
         </div>
@@ -144,7 +147,8 @@
   <!--Main layout-->
     </div>
     <div class="derecha">
-        <appcoonf></appcoonf> 
+       
     </div>
 </body>
 </html>
+
