--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
           <a href="#" class="list-group-item list-group-item-action py-2 ripple active" routerLink="/pacientes-list" routerLinkActive="activebutton">
             <i class="fas fa-chart-area fa-fw me-3"></i><span>Pacientes</span></a>
             
-          <a href="#" class="list-group-item list-group-item-action py-2 ripple" routerLink="/terapeuta-list" routerLinkActive="activebutton"><i
+          <a href="#" class="list-group-item list-group-item-action py-2 ripple" routerLink="/list-user" routerLinkActive="activebutton"><i
               class="fas fa-lock fa-fw me-3"></i><span>Terapeutas</span></a>
 
           <a href="#" class="list-group-item list-group-item-action py-2 ripple" routerLink="/consulta-list" routerLinkActive="activebutton"><i
@@ -151,4 +151,5 @@
     </div>
 </body>
 </html>
+<router-outlet></router-outlet>
 
